<resources>
    <string name="app_name">Sauce Burguer</string>
    <string name="mensagemLogin">Logue-se abaixo.</string>
    <string name="textoSenha">Senha</string>
    <string name="textoUsuario">Usuário</string>
    <string name="enviar">Login</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>
    <string name="NomeDoLanche">Nome do Lanche</string>
    <string name="urlDaFoto">URL da Foto</string>
    <string name="inserirPreco">Qual o valor?</string>
    <string name="TamanhoProduto">Tamanho do produto</string>
    <string name="API_KEY">AIzaSyCY2aAzy_l5-pQ7bXz4hgRV73ki05w21Kg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
