<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroLanche"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cadastrarNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NomeDoLanche"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/inserirNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/NomeDoLanche"
        android:inputType="textPersonName"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/urlFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urlDaFoto"
        android:layout_gravity="center"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/inserirUrlFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="URL"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/adicionarPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserirPreco"
        android:layout_gravity="center"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/inserirPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Preço"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tamanhoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TamanhoProduto"
        android:layout_gravity="center"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/inserirTamanhoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Peso/mls"
        android:inputType="textPersonName"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/cadastrarLanche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salvar"
        android:layout_gravity="center"/>
</LinearLayout>