<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    <ImageView
        android:id="@+id/imagemLogin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:adjustViewBounds="true"
        />
    </FrameLayout>
    <TextView
        android:id="@+id/mensagemLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagemLogin"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoUsuario"
            android:textSize="22sp"
            android:textAlignment="center"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:id="@+id/campoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:ems="10"
            android:hint="Informe seu usuário"
            android:textAlignment="center"
            android:layout_marginRight="30dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">
        <TextView
            android:id="@+id/textoSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoSenha"
            android:textSize="22sp"
            android:textAlignment="center"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:id="@+id/campoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Informe sua senha"
            android:layout_marginLeft="14dp"
            android:textAlignment="center"
            android:layout_marginRight="30dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <CheckBox
            android:id="@+id/checkLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lembrar dados" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/botaoLogin"
            android:layout_width="110dp"
            android:layout_height="78dp"
            android:layout_gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/enviar"
            android:textColor="@color/white" />
    </FrameLayout>

</LinearLayout>